# robotic-lab-assistant-calhacks2025

./: .gitignore  README.md
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/robot/status/: route.ts
dashboard/app/api/samples/: route.ts
dashboard/app/api/samples/[id]/: route.ts
dashboard/app/api/tasks/: route.ts
dashboard/app/api/tasks/[id]/: route.ts
dashboard/app/api/tasks/[id]/execute/: route.ts
dashboard/components/: protocol-phase-stepper.tsx  robot-status.tsx  sample-card.tsx  task-queue.tsx
dashboard/components/ui/: select.tsx
dashboard/lib/: mock-data.ts
dashboard/types/: index.ts
server/: .gitignore  README.md  example.py  pyproject.toml  run_example.sh  server.py  start.sh
